# stcp

./: Cargo.toml  README.md  design.md
examples/: stcp-client-filetransfer.rs  stcp-server-filetransfer.rs
src/: lib.rs
