[package]
name = "stcp"
version = "0.1.0"
authors = ["Vivian I. <massivestofvivians@gmail.com>"]
edition = "2021"

[[example]]
name = "stcp-server-filetransfer"
path = "examples/stcp-server-filetransfer.rs"

[[example]]
name = "stcp-client-filetransfer"
path = "examples/stcp-client-filetransfer.rs"

[dependencies]
aes-gcm = "0.10"
bincode = "1.3"
generic-array = "0.14"
hard = "0.5"
rand = "0.8"
rsa = { version = "0.7", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
